# CuCoPy

./: .gitignore  LICENSE  README.md  env.yml  environment.yml  main.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  push_main_to_gitlab.yml
components/: exchange.py  help.py  inflation.py
cucopy/: __init__.py  currency.py  parser.py  utils.py
cucopy/data/: IFS_CPI_1950-2021.csv  IFS_EREER_1979-2021.csv
data/legacy/: .~lock.legacy_cpi_de.csv#  .~lock.legacy_fcrf.csv#  legacy_cpi_all.csv  legacy_cpi_de.csv  legacy_fcrf.csv  lut.csv
data/legacy/old/: legacy_cpi.csv  legacy_cpi_de.csv  legacy_efer.csv  legacy_fcrf.csv  legacy_ppp.csv
examples/: tutorial.ipynb
src/cucopy/: currency.py  parser.py  utils.py
src/cucopy/data/: currency_iso_map.yaml  iso_country_map.yaml
tests/: test_currency.py
